--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -20,7 +20,7 @@
          <li class="color"></li>
         </div>
 </header>
-    <!--<main>
+    <main>
         <div id="pixel-board">
             <div>
                 <li class="pixel"></li>
@@ -58,7 +58,7 @@
                 <li class="pixel"></li>
             </div>
         </div>
-    </main> -->
-     <script src="script.js"></script> 
+    </main>
+     <script src="script.js"></script>
 </body>
 </html>
