--- a/index.html
+++ b/index.html
@@ -14,11 +14,16 @@
          </h1>
          <div id="color-palette">
              <h1>paleta</h1>
-         <li class="color"></li>
+         <li class="color selected"></li>
          <li class="color"></li>
          <li class="color"></li>
          <li class="color"></li>
         </div>
+        <button id="clear-board" onclick ='limparQuadro'() >Limpar
+        </button>
+        <input id="board-size" type="number" min="1"
+        max="50"><input>
+        <button id="generate-board">VQV</button>
 </header>
     <main>
         <div id="pixel-board">
