começando novamente, requisito 1

--- a/index.html
+++ b/index.html
@@ -4,66 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projeto pixel art</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <title>Pixel Art</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-     <header>
-        <h1 id="title">
-            Paleta de Cores
-         </h1>
-         <div id="color-palette">
-             <h1>paleta</h1>
-         <li class="color selected"></li>
-         <li class="color"></li>
-         <li class="color"></li>
-         <li class="color"></li>
-        </div>
-        <button id="clear-board" onclick ='limparQuadro'() >Limpar
-        </button>
-        <input id="board-size" type="number" min="1"
-        max="50"><input>
-        <button id="generate-board">VQV</button>
-</header>
-    <main>
-        <div id="pixel-board">
-            <div>
-                <li class="pixel"></li>
-                <li class="pixel"></li>
-                <li class="pixel"></li>
-                <li class="pixel"></li>
-                <li class="pixel"></li>
-            </div>
-            <div>
-                <li class="pixel"></li>
-                <li class="pixel"></li>
-                <li class="pixel"></li>
-                <li class="pixel"></li>
-                <li class="pixel"></li>
-            </div>
-            <div>
-                <li class="pixel"></li>
-                <li class="pixel"></li>
-                <li class="pixel"></li>
-                <li class="pixel"></li>
-                <li class="pixel"></li>
-            </div>
-            <div>
-                <li class="pixel"></li>
-                <li class="pixel"></li>
-                <li class="pixel"></li>
-                <li class="pixel"></li>
-                <li class="pixel"></li>
-            </div>
-            <div>
-                <li class="pixel"></li>
-                <li class="pixel"></li>
-                <li class="pixel"></li>
-                <li class="pixel"></li>
-                <li class="pixel"></li>
-            </div>
-        </div>
-    </main>
-     <script src="script.js"></script>
+    <h1 id="title">Paleta de Cores</h1>
+    
 </body>
 </html>
