--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <h1 id="title">Paleta de Cores</h1>
     <div id="color-palette">
-        <li id="red" class="color"></li>
+        <li id="black" class="color"></li>
         <li id="blue" class="color"></li>
         <li id="yellow" class="color"></li>
         <li id="pink" class="color"></li>
