requisito do 1 ao 6

--- a/index.html
+++ b/index.html
@@ -10,11 +10,53 @@
 <body>
     <h1 id="title">Paleta de Cores</h1>
     <div id="color-palette">
-        <li id="black" class="color"></li>
-        <li id="blue" class="color"></li>
-        <li id="yellow" class="color"></li>
-        <li id="pink" class="color"></li>
+        <li id="black" class="color selected"></li>
+        <li id="blue"  class="color"></li>
+        <li id="yellow"class="color"></li>
+        <li id="pink"  class="color"></li>
+    </div>
+     <div id="pixel-board">
+<div>
+    <li class="pixel" ></li >
+    <li class="pixel"></li >
+    <li class="pixel"></li >
+    <li class="pixel"></li >
+    <li class="pixel"></li >
+</div>
+<div>
+    <div>
+    <li class="pixel"></li >
+    <li class="pixel"></li >
+    <li class="pixel"></li >
+    <li class="pixel"></li >
+    <li class="pixel"></li >
+</div>
+<div>
+    
+    <li class="pixel"></li >
+    <li class="pixel"></li >
+    <li class="pixel"></li >
+    <li class="pixel"></li >
+    <li class="pixel"></li >
+</div>
+
+    <div>
+    <li class="pixel"></li >
+    <li class="pixel"></li >
+    <li class="pixel"></li >
+    <li class="pixel"></li >
+    <li class="pixel"></li >
+</div>
+<div>
+    <div>
+    <li class="pixel"></li >
+    <li class="pixel"></li >
+    <li class="pixel"></li >
+    <li class="pixel"></li >
+    <li class="pixel"></li >
+</div>
     </div>
     
+    <script src="script.js"></script>
 </body>
 </html>
