--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <li id="yellow"class="color"></li>
         <li id="pink"  class="color"></li>
     </div>
+    <div id="meio"></div>
      <div id="pixel-board">
 <div>
     <li class="pixel" ></li >
